# hello_http

./: .gitignore  Dockerfile  README.md  main.tf  makefile  packer.pkr.hcl
.github/workflows/: .build_ami_one.yml.swp  build_ami.yml  build_container.yml
docker/: main.tf
packer/: main.tf
src/: CMakeLists.txt  hello-http-serv@.service
